src/common/header/index.css
.ui.inverted.menu.thunder {
    background-color: #262223;
    height: 60px;
    justify-content: center;
}

.ui.inverted.menu.global.header .menu.search {
    flex-grow: 2;
    max-width: 600px;
}

.ui.inverted.menu.global.header .menu.search.right {
    margin-right: 1rem;
}

.ui.inverted.menu.global.header,
.ui.inverted.menu.global.header .menu.search .item,
.ui.inverted.menu.global.header .menu.search .item .ui.form,
.ui.inverted.menu.global.header .menu.search .item .ui.form .field .ui.input input {
    margin: 0;
    width: 100%;
}

.search.wrapper .ui.input > input {
    background-color: #494949;
    border-color: #494949;
    color: #fff;
    height: 46px;
    width: 100%;
}

.search.wrapper .ui.input .search.icon {
    color: #ddd;
    opacity: 1;
}

img.ui.image.profile {
    border-radius: 50%;
    width: 40px;
}

.menu.profile {
    font-size: 16px;
}

@media only screen and (max-width: 600px) {
    img.ui.image.profile {
      width: 32px;
    }

    .ui.inverted.menu.global.header .menu.search {
        flex-grow: 1;
        max-width: 150px;
    }

    .ui.secondary.menu .item {
        padding-left: 0;
        padding-right: 0;
    }
}

@media only screen and (min-width: 601px) and (max-width: 1000px) {
    .ui.inverted.menu.global.header .menu.search {
        flex-grow: 1;
        max-width: 300px;
    }
}

